--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <!DOCTYPE html>
-
+<head>
+<meta charset="UTF-8">
+<meta name="description" content="CCS Screening">
+<meta name="keywords" content="HTML, CSS, JavaScript">
+</head>
 </html>
